# lua_bundler

./: MANIFEST.in  README.md  bundle_base.lua  lua_bundler  lua_bundler.py  main.py  setup.cfg
tests/: test_main.py
tests/input/: main.lua  sub.lua
