[metadata]
name=lua_bundler
author=Thomas David
author_email=thomasdavid0@gmail.com
description=Module for bundling lua scripts into a single file to run in Ardupilot
long_description=file: README.md
long_description_content_type = text/markdown
version=0.0.1
url=https://github.com/ThomasDavid0/lua_bundler
scripts=lua_bundler
py_modules=['main.py']
[options]
include_package_data = True