[metadata]
name=lua_bundler
author=Thomas David
author_email=thomasdavid0@gmail.com
description=A tool for bundling lua scripts
long_description=file: README.md
long_description_content_type = text/markdown
version=0.0.1
url=https://github.com/ThomasDavid0/lua_bundler
[options]
scripts = 
    lua_bundler.py